tests/neg/unions/test-00.ts

/*@ fails :: (number) => number + undefined */
export function fails (x:number):any {
    return x ? true : undefined;
}
